Double scroll is fixed

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
     min-width: 320px;
     margin: 0 auto;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .page-wrapper-paddings {
